<resources>
    <string name="app_name">DONE DIDit</string>
    <string name="tab_1_all">ALL TASKS</string>
    <string name="tab_2_incomplete">INCOMPLETE</string>
    <string name="tab_3_completed">COMPLETED</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Main: %1$d</string>
    <string name="tab_1_all_format">ALL TASKS %1$d</string>
    <string name="tab_2_incomplete_format">INCOMPLETE %1$d</string>
    <string name="tab_3_completed_format">COMPLETED %1$d</string>
    <string name="add_new_task">Add New Task</string>
    <string name="view_all">View All</string>
    <string name="view_incomplete">View Incomplete</string>
    <string name="view_completed">View Completed</string>
    <string name="create_new">Create New</string>
    <string name="add_task_instructions">Complete all fields,\nthen select SUBMIT to add your task\nto the task manager.</string>
    <string name="enter_title">Enter title of task</string>
    <string name="enter_due_date">Enter due date</string>
    <string name="enter_details">Enter task details</string>
    <string name="task_title">%1$s</string>
    <string name="complete_by_date">COMPLETE BY: %1$s</string>
    <string name="completed_on_date">COMPLETED ON: %1$s</string>
    <string name="view_details_text">Select to view details.</string>
    <string name="submit">SUBMIT</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="task_all_caps">TASK</string>
    <string name="string_variable">%1$s</string>
    <string name="details_all_caps">DETAILS</string>
    <string name="due_variable">DUE %1$S</string>
    <string name="ok_all_caps">OK</string>
</resources>
