<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    >

    <LinearLayout
        android:id="@+id/details_dialog_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryLight">

        <TextView
            android:id="@+id/task_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_all_caps"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"/>

        <TextView
            android:id="@+id/task_title_dialog_variable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_variable"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/details_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_all_caps"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"/>

        <TextView
            android:id="@+id/details_dialog_variable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_variable"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/due_date_dialog_variable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_variable"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"/>

        <Button
            android:id="@+id/ok_dismiss_dialog_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/ok_all_caps"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>